# checkers-tcp

./: .gitignore  CMakeLists.txt  README.md
checkers-tcp-client/: .gitignore  CMakeLists.txt  qml.qrc
checkers-tcp-client/include/: board.h  checkers_engine.h  checkers_model.h  checkersmodel.h  engine.h  game.h  message.h  message_handler.h  misc.h  network_session.h  networkgamesession.h  networksession.h  pack.h  qpiece.h  spot.h
checkers-tcp-client/qml/: CheckerBoard.qml  CheckerBoard_old.qml  ConnectingPane.qml  CreatedLobbyPane.qml  GamePane.qml  MainMenu.qml  MenuButton.qml  NotificationDialog.qml  Settings.qml  SettingsDialog.qml  TestCheckersBoard.qml  main.qml
checkers-tcp-client/src/: checkers_engine.cpp  checkers_model.cpp  checkersmodel.cpp  engine.cpp  game.cpp  main.cpp  message.cpp  message_handler.cpp  network_session.cpp  networkgamesession.cpp  networksession.cpp  pack.cpp  qpiece.cpp  spot.cpp
checkers-tcp-core/: CMakeLists.txt
checkers-tcp-core/include/: board.h  checkers_engine.h  message.h
checkers-tcp-core/src/: checkers_engine.cpp  message.cpp
checkers-tcp-server/: CMakeLists.txt  checkers_engine.cpp  game_session.cpp  game_session.h  listener.cpp  listener.h  main.cpp  message.cpp  message.h  socket.cpp
checkers-tcp-server/include/: checkers_engine.h  game_session.h  message.h  message_handler.h  new_misc.h  pack.h  socket.h
checkers-tcp-server/src/: checkers_engine.cpp  game_session.cpp  listener.cpp  main.cpp  message.cpp  message_handler.cpp  socket.cpp
